# genetic-nn

./: CMakeLists.txt  Makefile.win  activation_functions.cpp  activation_functions.h  cfg.txt  config.cpp  config.h  crossover.cpp  crossover.h  dataset.cpp  dataset.h  fully_connected_layer.h  genetic_algorithm_optimizer.cpp  genetic_algorithm_optimizer.h  genetic_solution.cpp  genetic_solution.h  gradient_desc_optimizer.cpp  gradient_desc_optimizer.h  initializers.cpp  initializers.h  layer.h  main.cpp  matrix.cpp  matrix.h  mutations.cpp  mutations.h  nn_model.cpp  nn_model.h  population.cpp  population.h  quadratic_loss.cpp  quadratic_loss.h  readme.md  selection.cpp  selection.h  solution_pool.cpp  solution_pool.h  tourney_layer.cpp  tourney_layer.h  util.cpp  (+1 more)
